--- a/Festival/war/Festival.html
+++ b/Festival/war/Festival.html
@@ -25,6 +25,8 @@
     <!-- If you add any GWT meta tags, they must   -->
     <!-- be added before this line.                -->
     <!--                                           -->
+    
+    <script type="text/javascript" language="javascript" src="js/showdown.js"></script>
     <script type="text/javascript" language="javascript" src="festival/festival.nocache.js"></script>
   </head>
 
