--- a/FestivalV2/war/ccaf.html
+++ b/FestivalV2/war/ccaf.html
@@ -61,10 +61,13 @@ document.onclick = jsddm_close;
 		</ul>
 	</div>
 	<div id="post-menu" />
-	<div id="body">Welcome to Codsall Community Arts Festival 2010</div>
-	<div id="footer">Email: <a
-		href="mailto:&#099;&#111;&#100;&#115;&#097;&#108;&#108;&#097;&#114;&#116;&#115;&#102;&#101;&#115;&#116;&#105;&#118;&#097;&#108;&#064;&#103;&#111;&#111;&#103;&#108;&#101;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;">&#099;&#111;&#100;&#115;&#097;&#108;&#108;&#097;&#114;&#116;&#115;&#102;&#101;&#115;&#116;&#105;&#118;&#097;&#108;&#064;&#103;&#111;&#111;&#103;&#108;&#101;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;</a>
-	</div>
+	<div id="body"><strong>Welcome to Codsall Community Arts Festival, Wednesday 10th March - Saturday 27th March 2010</strong></div>
 	<div id="bottom"></div>
+	<div id="footer">
+	<img src="images/southstaffs.gif" alt="South Staffs Council"/>
+	<img src="images/scclogo-sm.gif" alt="Staffs Council"/>
+	&#099;&#111;&#100;&#115;&#097;&#108;&#108;&#097;&#114;&#116;&#115;&#102;&#101;&#115;&#116;&#105;&#118;&#097;&#108;&#064;&#103;&#111;&#111;&#103;&#108;&#101;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;
+	</br>  Registered Charity #1127064
+	</div>
 </div>
 </body>
