added logos to banner

--- a/FestivalV2/war/ccaf.html
+++ b/FestivalV2/war/ccaf.html
@@ -33,7 +33,7 @@ document.onclick = jsddm_close;
 </head>
 <body>
 <div id="page-panel">
-	<div id="banner"><img src="ccaf-small.png" alt="ccaf logo"
+	<div id="banner"><img src="images/ccaf-small.png" alt="ccaf logo"
 		class="header-logo" align="left" />
 		<h1>Codsall Arts Festival</h1>
 		<h2>Music, Theatre and Visual Arts<br />
